--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,8 +22,12 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
+    "react-modal": "^3.16.1",
     "react-toastify": "^9.1.1",
     "sass": "^1.57.1",
     "typescript": "4.9.4"
+  },
+  "devDependencies": {
+    "@types/react-modal": "^3.13.1"
   }
 }
